fix: fix scrollbar

--- a/src/components/table-body/index.less
+++ b/src/components/table-body/index.less
@@ -3,7 +3,6 @@
   top: 0;
   left: 0;
   overflow: hidden;
-  padding-top: 4px;
 }
 
 .row {
